funcion Jedi minima listo
