# src/app.js
@@ -2,7 +2,7 @@ const express = require('express');
 const cors = require('cors');
 const swaggerUi = require('swagger-ui-express');
 
-const jedis = [
+let jedis = [
     {
         "id": 1,
         "name": "Ahsoka Tano",
@@ -14,7 +14,7 @@ const jedis = [
         "species": "Human"
     },
     {
-        "id": 3,    
+        "id": 3,
         "name": "Jhuan Vekar Bel’tan",
         "species": "Human"
     },
@@ -29,7 +29,7 @@ const app = express();
 const PORT = 3030;
 
 app.use(cors()); //- app.use es para usar una funcionalidad
-
+app.use(express.json());
 
 //- Crear ruta de Documentación
 let swaggerDocument;
@@ -51,21 +51,41 @@ app.get('/', (req, res) => {
 })
 
 //- Mostrar todos los jedi
-app.get('/jedis', (req, res) =>{
+app.get('/jedis', (req, res) => {
     res.json(jedis);
 })
 
 //- Mostrar jedi por ID
-app.get('/jedis/:id',(req, res) =>{
+app.get('/jedis/:id', (req, res) => {
     let id = req.params.id;
     res.json(jedis.find(jedi => jedi.id == id));
 })
 
-//-Eliminar un jedi por ID
-app.delete('/jedis/:id', (req, res) =>{
+//-Eliminar un jedi
+app.delete('/jedis/:id', (req, res) => {
     let id = req.params.id;
-    res.status(204);
+    jedis = jedis.filter(jedi => jedi.id != id);
+    res.status(204).json({msg: 'Jedi eliminado'});
 })
+
+//- Crear un jedi
+app.post('/jedis', (req, res) => {
+    console.log('body:', req.body)
+    const newJedis = req.body;
+    let maximo = jedis.Math.max(...jedis.map(j => j.id));
+    newJedis.id = maximo+1;
+    jedis.push(newJedis);
+    res.status(201).json(newJedis);
+})
+
+app.put('/jedis/:id', (req, res) => {
+    let id = req.params.id;
+    let jedi = jedis.find(j => j.id == id);
+    console.log(jedi);
+    jedi.name = req.body.name;
+    jedi.species = req.body.species;
+    res.status(200).json(jedi);
+});
 
 
 //- Para ver la API 
